reworked media queries, fixed overflow caused by hero text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,9 @@ body {
     
 }
 
+#contactbody {
+    width: 100%;
+}
 
 header {
     background-color: #dddedf;
@@ -59,13 +62,14 @@ h2 {
     font-size: 180%;
 }
 nav {
-    position: fixed;
     top: 0;
-    width: 100%;
+    left: 0; /* Adjust to align the navbar to the left edge */
+    width: 100%; /* Ensure the navbar spans the full width of the screen */
     background-color: #161616;
-    background-color: #16161688;
-    padding: 10px;
     z-index: 1000;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    position: fixed;
 }
 nav a {
     color: white;
@@ -111,12 +115,11 @@ p {
 #footer {
     background-color: black;
     height: 40px;
-    display: flex;
     justify-content: center;
     align-items: center;
     bottom: 0px;
     color: white;
-    font-size: 120%;
+    
 }
 #footer a {
     color: white;
@@ -151,78 +154,79 @@ p {
 
 
 
-@media screen and (min-width: 400px) {
+/* media queries */
+
+/* sub 400px */
+@media screen and (max-width: 399px) {
     #photos {
         column-count: 1;
-    }
-
-    .trainerphoto {
-        width: 40%;
-        width: 100%; 
-        max-width: 100%; 
-
-    }
-
-    h2 {
-        text-align: center;
-        color: slategray;
-        font-family: 'Rock Salt', 'Roboto Condensed', sans-serif;
-        font-size: 100%;
-
-}
-
-
-@media screen and (min-width: 576px) {
-    #photos {
-        column-count: 2;
-    }
-
-    .trainerphoto {
-        width: 40%;
-        width: 100%; 
-        max-width: 100%; 
-
-    }
-
-    h2 {
-        text-align: center;
-        color: slategray;
-        font-family: 'Rock Salt', 'Roboto Condensed', sans-serif;
-        font-size: 100%;
-
-}
-
-
-@media screen and (min-width: 768px) {
-    #photos {
-        column-count: 3;
     }
     .trainerphoto {
         width: 45%;
     }
-
     h2 {
-        text-align: center;
-        color: slategray;
-        font-family: 'Rock Salt', 'Roboto Condensed', sans-serif;
+        font-size: 100%;
+    }
+    #audiobutton {
+        display: none;
+    }
+
+    #cover-text h2 {
+        font-size: 200%;
+    }
+}
+
+/* 400px to 599px */
+@media screen and (min-width: 400px) and (max-width: 599px) {
+    #photos {
+        column-count: 1;
+    }
+    .trainerphoto {
+        width: 45%; 
+    }
+    h2 {
+        font-size: 100%;
+    }
+    #audiobutton {
+        display: none;
+    }
+
+    #cover-text h2 {
+        font-size: 350%;
+    }
+
+    
+}
+
+/* 600px to 799px */
+@media screen and (min-width: 600px) and (max-width: 799px) {
+    #photos {
+        column-count: 2;
+    }
+    .trainerphoto {
+        width: 45%;
+    }
+    h2 {
+        font-size: 100%;
+    }
+}
+
+/* 800px to 1199px */
+@media screen and (min-width: 800px) and (max-width: 1199px) {
+    #photos {
+        column-count: 2;
+    }
+    .trainerphoto {
+        width: 65%;
+    }
+    h2 {
         font-size: 120%;
+    }
 }
-}
+
+/* above 1200px */
 @media screen and (min-width: 1200px) {
     #photos {
         column-count: 4;
-    }
-    .flex-container {
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-    }
-    .image-container {
-        order: 2;
-        flex: 0 0 33%;
-    }
-    .text-container {
-        order: 1;
-        flex: 0 0 67%;
     }
 }
